test/tests/errors/error-class-cannot-have-both-private-public.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        private const x: int = 1;
        public const x: int = 1;
    }
}